--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "authors": [
         {
             "name": "Morgann Collet",
-            "email": "morgann.collet@gmail.com"
+            "email": "morgannc@protonmail.com"
         }
     ],
     "require": {
